--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="" type="text/css"/>
-    <title>Document</title>
+    <title>Primera Página</title>
 </head>
 <body>
     
